Altera o nome amigável (conforme demanda da Secom)

--- a/src/brasil/gov/paginadestaque/locales/pt_BR/LC_MESSAGES/brasil.gov.paginadestaque.po
+++ b/src/brasil/gov/paginadestaque/locales/pt_BR/LC_MESSAGES/brasil.gov.paginadestaque.po
@@ -41,7 +41,7 @@ msgstr "Microsite para uma campanha"
 
 #: brasil/gov/paginadestaque/profiles/default/types/sc.microsite.xml
 msgid "Pagina Destaque"
-msgstr "Página Destaque"
+msgstr "Página de Destaque"
 
 #: brasil/gov/paginadestaque/tiles/spacer.pt:14
 msgid ""
